# ai_insurance_claim_status

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
data/glossary/: insurance_terms.py
data/synthetic/: claims.csv  claims.json  generate_claims.py
src/agent/: claim_agent.py  config.py  ragas_eval.py
src/ui/: app.py
test/: conftest.py  test_agent.py  test_api.py
